# cpp20-socks5demo

./: CMakeLists.txt  LICENSE  README.md
sln/: socks5demo.sln
sln/socks5demo/: socks5demo.vcxproj
src/: CMakeLists.txt  main.cpp
